# chatbot

./: .gitignore
frontend/: inspect_chatpage.py  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  Layout.tsx  index.css  main.tsx
frontend/src/components/buttons/: ThemeButton.tsx
frontend/src/components/chat/: ChatWindow.tsx  MessageBubble.tsx  MessageInput.tsx  Sidebar.tsx
frontend/src/components/header/: Navbar.css  Navbar.tsx
frontend/src/components/svg/: svgs.tsx
frontend/src/context/: ThemeContext.tsx  UserContext.tsx
frontend/src/data/: chat.json  messages.json
frontend/src/pages/Chat/: ChatPage.css  ChatPage.tsx
frontend/src/pages/Signin/: SIgnIn.css  SignIn.tsx
frontend/src/styles/: global.css
frontend/src/types/: theme.ts
frontend/src/utils/: axiosInstance.ts  localStorage.ts
server/: main.py  pyproject.toml
server/src/: server.py
server/src/common/: app_error.py  response.py
server/src/config/: setting.py
server/src/database/: session.py
server/src/database/models/: __init__.py  chat.py  chat_participant.py  contact.py  group.py  media.py  message.py  status_story.py  status_view.py  user.py  user_chat.py  users.py
server/src/middlewares/: auth.py  error_handler.py  logger.py
server/src/routes/: chatroutes.py  contactroutes.py  messageroutes.py  userroutes.py
server/src/schema/: authSchema.py  contactSchema.py  messageSchema.py
server/src/services/: chatservice.py  contactservice.py  messageservice.py  userservice.py
server/src/utils/: security.py
server/utils/: dependencies.py  jwthandler.py
(+7 files in other folders)
